2002-05-06  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Erase stamps from the Makefile that generates them.

	* automake.in (handle_configure): Append each used stamp to
	@distclean_config.  Don't warn about stamp-h in AC_OUTPUT, this
	file is not used anymore.
	* lib/am/clean.am (distclean-generic): Don't erase stamp-h and
	stamp-h[0-9]*.
	* tests/subdir6.test: New file.
	* tests/Makefile.am (TESTS): Add it.

2002-05-06  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for condd.test (conditional `+='):
	* automake.in (%appendvar): New.
	(initialize_per_input): Clear it.
	(macro_define): Handle += for variable defined in another condition.
	* automake.texi (Conditional Sources): Use conditional += in
	the example.
	(General Operation, Conditionals): Remove note about broken +=.
	* tests/cond21.test: New file.
	* tests/condd.test: Also test conditional append to a _SOURCE
	variable.  Create missing directories.
	* tests/Makefile.am (TESTS): Add cond21.test.
	(XFAILS): Remove condd.test.

2002-05-05  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Program and Library Variables): Mention _LFLAGS.

2002-04-30  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/ltlib.am (clean-%DIR%LTLIBRARIES): Erase so_locations
	files.  Fix subobj9.test on OSF and IRIX.
	Reported by Nelson H. F. Beebe.

2002-04-26  Tom Tromey  <tromey@redhat.com>

	* lib/am/dejagnu.am (distclean-DEJAGNU): New target.
	For Debian bug 144221.

2002-04-26  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/man2.test: Use `pwd`, not $PWD.  Use $MAKE -e.

2002-04-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (subobjname): Use the length of %subobjvar
	instead	of $subobjnamenum.
	(subobjnamenum): Remove.

2002-04-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For PR automake/307:
	* lib/depcomp: Never compute dependencies in the background, this
	can cause races with libtool.  Compute the dependencies after
	the actual compilation.  Don't make libtool silent now that